# scoop-dash-py

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
e2e/: conftest.py  test_hello.py  test_register_interest.py
migrations/: env.py
migrations/versions/: 4162eb089b36_initial_migration.py  d72cdbb10e3e_add_greeter.py
scripts/: deploy.sh
src/: datastore.py  scoop_dash_py.py
src/models/internal/: greeting_incidenct.py  interested_visitor.py
src/repositories/greeting/: in_memory.py  postgres.py  type.py
src/repositories/visitors/: in_memory.py
src/routes/: hello_world.py
src/routes/api/v1/: interested_visitors.py
src/services/: greeter.py  greeter_count.py  visitors_service.py
tests/: test_hello_world.py
tests/repositories/: test_greeting.py  test_interested_visitors.py
tests/routes/: conftest.py  test_hello_world.py
tests/routes/api/v1/: test_interested_visitors.py
tests/services/: test_greeter.py  test_greeter_count.py  test_interested_visitors.py
